crates/viewer/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.LineStrips3D.snap
---
source: crates/viewer/re_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
strips: [[]]
radii: [-1.5]
colors: [3161148927]
labels: []
show_labels: [true]
class_ids: [0]
