crates/viewer/re_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.Points2D.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
positions: [[0.0, 0.0]]
radii: [-1.5]
colors: [2428259839]
labels: []
show_labels: [true]
draw_order: [20.0]
class_ids: [0]
keypoint_ids: [0]
